# Chess-Exercises-Organizer-Rust-GTK

./: Cargo.toml  README.md
src/: graphic.rs  main.rs
src/graphic/: chess_board.rs  chess_board_painter.rs  main_window.rs
